--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,13 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="section_text">month</string>
     <string name="comment_text"/>
+    <string name="dayView"/>
+    <string name="heightView"/>
+    <string name="weightView"/>
+    <string name="bmiView"/>
+    <string name="commentText"/>
+    <string name="bmi_text"/>
+    <string name="day_text"/>
+    <string name="height_text"/>
+    <string name="weight_text"/>
 </resources>
